# beaver-agent

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.evolution/: log.md  multi-agent-design.md  todo.md
config/: .env.example  settings.yaml
data/memory/: user_preference.jsonl
doc/: architecture.md  beaver-agent-enhanced-loop.drawio  evolution.md
skills/grill-me/: SKILL.md
skills/hello-world/: SKILL.md
skills/mcp-config/: SKILL.md
skills/project-analyzer/: SKILL.md
skills/refactor/: SKILL.md
skills/tdd/: SKILL.md
skills/vertical-slice/: SKILL.md
src/: pixel_pilot.py
src/beaver_agent/: __init__.py  main.py
src/beaver_agent/cli/: __init__.py  commands.py  interactive.py
src/beaver_agent/core/: __init__.py  agent.py  config.py  conversation_logger.py  data_store.py  intent_parser.py  llm_client.py  mcp_manager.py  skill_manager.py  task_planner.py  (+1 more)
src/beaver_bot/: main.py
tests/: test_adapter.py  test_agent.py  test_browser_tool.py  test_cli.py  test_cli_app.py  test_cli_commands.py  test_code_analyzer.py  test_code_gen.py  test_code_review.py  test_config.py  test_conversation_logger.py  test_data_store.py  test_debugger.py  test_eval.py  test_file_tool.py  test_github_tool.py  test_intent_parser.py  test_interactive.py  test_llm_client.py  test_long_term_memory.py  test_main.py  test_mapper.py  test_mcp_manager.py  test_memory.py  test_metrics.py  test_multi_agent_components.py  test_pixel_pilot.py  test_skill_manager.py  test_task_planner.py  test_terminal_tool.py  test_tool_router.py  test_tool_router_llm.py
(+52 files in other folders)
