[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beaver-agent"
version = "0.1.0"
description = "🦫 Beaver Agent - Self-Evolving AI Coding Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Beaver Agent Team", email = "beaver@agent.com" }
]
keywords = ["ai", "agent", "coding", "assistant", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "github3.py>=3.3.0",
    "aiohttp>=3.9.0",
    "openai>=1.12.0",
    "anthropic>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
beaver = "beaver_agent.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/beaver_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
